Правки свагера, добавление проверки пустого и просроченного токена.
