# docs/swagger.json
@@ -310,6 +310,18 @@
                             "$ref": "#/definitions/employee.PageResponse"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized or token expired",
+                        "schema": {
+                            "$ref": "#/definitions/employee.PageResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Permission denied",
+                        "schema": {
+                            "$ref": "#/definitions/employee.PageResponse"
+                        }
+                    },
                     "408": {
                         "description": "time out request",
                         "schema": {
